--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,21 @@
-h1 {
+html {
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #edae49;
+}
+
+h1, p {
     text-align: center;
 }
+
+p {
+    background: grey;
+    width: 200px;
+    margin: auto;
+    border-radius: 10px;
+    font-size: 20px;
+    border: 2px solid black;
+}
+
