--- a/style/style.css
+++ b/style/style.css
@@ -3,14 +3,15 @@ html {
 }
 
 body {
-    background-color: #edae49;
+    background-color: #EDAE49;
+    font-family: "Oswald", sans-serif;
 }
 
 h1, p {
     text-align: center;
 }
 
-p {
+p, button {
     background: grey;
     width: 200px;
     margin: auto;
@@ -26,6 +27,8 @@ p {
 }
 
 button {
-    width: 100px;
+    width: 150px;
     margin-top: 20px;
+    font-size: 15px;
 }
+
